Fix #36075: editing shading nodes could still crash blender internal rendered draw mode. This happens because it uses node data structures in threads, now it does same as preview render, which is to immediately stop the render thread when e.g. deleting nodes.